--- a/docker/Dockerfile-DevContainer
+++ b/docker/Dockerfile-DevContainer
@@ -10,6 +10,8 @@ wget \
 lsb-release \
 git \
 nano \
+python3-dev \
+python3-pip \
 && rm -rf /var/lib/apt/lists/*
 
 # install intel igpu drivers and openvino
@@ -30,7 +32,7 @@ RUN apt-get update && apt-get install -y \
 RUN wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
 RUN apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
 
-RUN echo "deb https://apt.repos.intel.com/openvino/2023 ubuntu20 main" | tee /etc/apt/sources.list.d/intel-openvino-2023.list
+RUN echo "deb https://apt.repos.intel.com/openvino/2024 ubuntu20 main" | tee /etc/apt/sources.list.d/intel-openvino-2024.list
 RUN apt-get update && apt-get install -y \
 openvino \
 && rm -rf /var/lib/apt/lists/*
@@ -44,7 +46,7 @@ RUN git clone --recursive --depth 1 -b ${ONNXRUNTIME_BRANCH} ${ONNXRUNTIME_REPO}
 RUN /bin/sh onnxruntime/dockerfiles/scripts/install_common_deps.sh
 RUN ln -s cmake-* cmake-dir
 ENV PATH=${WORKDIR_PATH}/cmake-dir/bin:$PATH
-ENV INTEL_OPENVINO_DIR=/usr/lib/openvino-2023.3.0/
+ENV INTEL_OPENVINO_DIR=/usr/lib/openvino-2024.0.0/
 RUN cd onnxruntime && ./build.sh --allow_running_as_root --skip_submodule_sync --use_openvino ${DEVICE} \
  --cuda_home /usr/local/cuda --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_cuda --config Release \
  --update --build --build_shared_lib --parallel 10 --cmake_extra_defines ONNXRUNTIME_VERSION=$(cat ./VERSION_NUMBER) 'CMAKE_CUDA_ARCHITECTURES=52;60;61;70;75;86' \
@@ -63,6 +65,7 @@ uncrustify \
 git-core \ 
 bash-completion \
 clang-format-12 \
+sudo \
 && rm -rf /var/lib/apt/lists/* 
 
 # enables auto complete in the terminal
