--- a/docker/Dockerfile-DevContainer
+++ b/docker/Dockerfile-DevContainer
@@ -38,7 +38,7 @@ openvino \
 && rm -rf /var/lib/apt/lists/*
 
 # Build onnxruntime from source
-ARG DEVICE=AUTO:GPU,CPU
+ARG DEVICE=GPU_FP16
 ARG ONNXRUNTIME_REPO=https://github.com/microsoft/onnxruntime.git
 ARG ONNXRUNTIME_BRANCH=main
 ENV WORKDIR_PATH=/
@@ -46,10 +46,11 @@ RUN git clone --recursive --depth 1 -b ${ONNXRUNTIME_BRANCH} ${ONNXRUNTIME_REPO}
 RUN /bin/sh onnxruntime/dockerfiles/scripts/install_common_deps.sh
 RUN ln -s cmake-* cmake-dir
 ENV PATH=${WORKDIR_PATH}/cmake-dir/bin:$PATH
-ENV INTEL_OPENVINO_DIR=/usr/lib/openvino-2024.0.0/
+# ENV INTEL_OPENVINO_DIR=/usr/lib/openvino-2024.0.0/
+ENV OpenVINO_DIR=/usr/lib/cmake/openvino-2024.0.0/
 RUN cd onnxruntime && ./build.sh --allow_running_as_root --skip_submodule_sync --use_openvino ${DEVICE} \
  --cuda_home /usr/local/cuda --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_cuda --config Release \
- --update --build --build_shared_lib --parallel 10 --cmake_extra_defines ONNXRUNTIME_VERSION=$(cat ./VERSION_NUMBER) 'CMAKE_CUDA_ARCHITECTURES=52;60;61;70;75;86' \
+ --update --build --build_shared_lib --parallel 8 --cmake_extra_defines ONNXRUNTIME_VERSION=$(cat ./VERSION_NUMBER) 'CMAKE_CUDA_ARCHITECTURES=52;60;61;70;75;86' \
  && mkdir /opt/onnxruntime \
  && cp -r /onnxruntime/build/Linux/Release /opt/onnxruntime/lib \
  && cp -r /onnxruntime/include/ /opt/onnxruntime/ \
